[package]
name = "pyorion"
version = "0.1.0"
edition = "2021"

[lib]
name = "_pyorion"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["anyhow", "extension-module", "generate-import-lib"] }
pyo3-log = "0.12"
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
pyo3-async-runtimes-macros = "0.25"
sysinfo = { version = "0.37.0", features = ["network", "system"] }
network-interface = { version = "2.0.3", features = ["serde"] }
rustls-pemfile = "2.2.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "fs", "io-util","signal"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
tokio-rustls = "0.26.2"
rustls = "0.23.31"
rustls-webpki = "0.103.4"
tree_magic_mini = "3.2.0"
anyhow = "1.0.91"
bytes = "1.10.1"
crossbeam-channel = "0.5.15"
tokio-stream = "0.1.17"
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
serde_with = "3.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.0", features = ["v4"] }
muda = "0.17.1"
tray-icon = "0.21.1"
global-hotkey = "0.7.0"
tao = { version = "0.34.2", features = ["serde"] }
wry = { version ="0.53.2", features = ["devtools"] }
url = { version = "2.5.7", features = ["serde"] }
once_cell = "1.21.3"
image = "0.25.6"
mime_guess = "2.0.5"
directories = "6.0.0"
pyorion_macros = { path = "./crates/pyorion_macros" }
pyorion_options = { path = "./crates/pyorion_options" }
base64 = "0.22.1"
infer = "0.19.0"
ctrlc = "3.4.7"
serialize-to-javascript = "0.1.2"
rfd = { version = "0.15.4", default-features = false, features = ["xdg-portal", "tokio"] }
notify-rust = "4.11.7"
arboard = "3.6.1"
raw-window-handle = "0.6.2"
window-vibrancy = "0.6.0"
dirs = "6.0.0"
notify = "8.2.0"
walkdir = "2.5.0"
sha2 = "0.10.9"
# opencv = "0.95.1"

[workspace]
members = [
    "crates/pyorion_macros",
    "crates/pyorion_options"
]

[target.'cfg(unix)'.dependencies]
signal-hook-tokio = "0.3.1"




[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security_Authorization"
]}
webview2-com = { version = "0.38", optional = true }
window-vibrancy = "0.6"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI",
  "Win32_UI_WindowsAndMessaging",
] }


runas = "=1.2.0"
deelevate = "0.2.0"
winreg = "0.55.0"
winapi = { version = "0.3.9", features = [
  "winbase",
  "fileapi",
  "winnt",
  "handleapi",
  "errhandlingapi",
  "minwindef",
  "winerror",
  "tlhelp32",
  "processthreadsapi",
  "winhttp",
  "winreg",
] }

[target.'cfg(target_os = "linux")'.dependencies]
users = "0.11.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true




# macOS
[target.'cfg(target_os = "macos")'.dependencies]
embed_plist = "1.2"
plist = "1"
objc2-foundation = { version = "0.3", default-features = false, features = [
  "std",
  "NSData",
  "NSThread",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "std",
  "NSApplication",
  "NSColor",
  "NSResponder",
  "NSView",
  "NSWindow",
  "NSImage",
] }
objc2-web-kit = { version = "0.3", features = [
  "objc2-app-kit",
  "WKWebView",
  "WKUserContentController",
] }
window-vibrancy = "0.6"

