[package]
name = "pyorion_options"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.91"
bytes = "1.10.1"
futures = "0.3.31"
serde_with = "3.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.0", features = ["v4"] }
tao = { version = "0.34.2", features = ["serde"] }
wry = { version ="0.53.2", features = ["devtools"] }
url = { version = "2.5.7", features = ["serde"] }
image = "0.25.6"
mime_guess = "2.0.5"
directories = "6.0.0"
base64 = "0.22.1"
